get answer by questiona and get author
